--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <p>
                         Previously, I worked as a Data Scientist at HT Media Ltd, a leading Indian mass media organization where I led a team of Data Scientists to develop a recommendation engine for the <a href="https://play.google.com/store/apps/details?id=com.ht.ottplay&hl=en_US&gl=US">OTTPlay application</a> for generating personalized movie and TV show recommendations for the users. I also led the data engineering team for crawling movies and shows information from OTT websites to reduce costs associated with data collection.
                     </p>
-                    I have also worked at Persistent Systems where I worked on a project to perform sentiment analysis on clients' emails using various Natural Language Processing techniques to understand customer satisfaction with the services provided by the organization.
+                    During my time at Persistent Systems, I worked on a project to perform sentiment analysis on clients' emails using various Natural Language Processing techniques to understand customer satisfaction with the services provided by the organization.
                     </p>
                 </div>
 
