--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <h1>About</h1>
                     </div>
                     <p>
-                        Update: At Social Science Consulting LLC as of August 2023, working with Dr. Brad Fulton from Indiana University, to design state-of-the-art Graph Neural Networks based recommendation engine approach for social science networks. The goal is to develop a system that recommends foundations to organizations for charitable purposes in the state of Indiana.
+                        Update: At Social Science Consulting LLC as of August 2023, working with <a href="https://oneill.indiana.edu/faculty-research/directory/profiles/faculty/full-time/fulton-brad.html">Dr. Brad Fulton, to design state-of-the-art Graph Neural Networks based recommendation engine approach for social science networks. The goal is to develop a system that recommends foundations to organizations for charitable purposes in the state of Indiana.
                     </p>
                     <p>
                         At ProMazo, I contributed to the development of a customer retention model for a Fortune 500 banking and insurance client to detect the rate of attrition of customers and suggest alternatives to avoid attrition. 
