--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class='row'>
             <div class="col-md-4" id='sidebar'>
                 <h1>Anurag Hambir</h1>
-                <img src="public/img/.png" width='100%'>
+                <img src="public/img/anurag_img.JPG" width='100%'>
 
                 <section id='contact-info'>
                     <ul>
@@ -23,9 +23,6 @@
                         <li>
                             <strong>Vitals:</strong> <a href="public/personal/Anurag_Hambir_Resume.pdf">CV/Resume</a>
                         </li>
-                        <!-- <li>
-                            <strong>Twitter:</strong> <a href="https://twitter.com/pmalhotra96">@pmalhotra96</a>
-                        </li> -->
                         <li>
                             <strong>Github:</strong> <a href="https://github.com/anuraghambir">anuraghambir</a>
                         </li>
