--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <section id='contact-info'>
                     <ul>
                         <li>
-                            <strong>Email:</strong> ahambir [at] iu [dot] edu
+                            <strong>Email:</strong> anuraghambir [at] gmail [dot] com
                         </li>
                         <li>
                             <strong>Vitals:</strong> <a href="public/personal/Anurag_Hambir_Resume.pdf">CV/Resume</a>
